ability to search on google and readme details

--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,7 @@ main .main-input input {
     border: none;
     outline: none;
     background-color: transparent;
+    color: white;
 }
 
 main .main-input-container:hover {
